--- a/frontend/index.html
+++ b/frontend/index.html
@@ -9,19 +9,19 @@
     <link rel="manifest" href="/site.webmanifest" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <!-- Open Graph мета-теги для Telegram и других соцсетей -->
-    <meta property="og:title" content="ЕНРІ-Трейдинг — ваш партнер у торгівлі та логістиці" />
-    <meta property="og:description" content="Наша місія — надавати бізнесу ефективні та надійні рішення в сфері торгівлі та логістики. Ми пишаємося сотнями успішних проектів та довгостроковими партнерствами з нашими клієнтами." />
+    <meta property="og:title" content="ЕНРІ-Трейдинг — ваш партнер у торгівлі та логістиці сантехніки та опалення" />
+    <meta property="og:description" content="Наша місія — забезпечувати бізнес ефективними та надійними рішеннями в сфері торгівлі та логістики сантехнічного та опалювального обладнання. Ми співпрацюємо з провідними виробниками та постачальниками, гарантуємо якість продукції й оптимізацію постачань." />
     <meta property="og:image" content="/image.png" />
     <meta property="og:url" content="https://enri-trading.com/" />
     <meta property="og:type" content="website" />
 
     <!-- Twitter Card мета-теги (опционально) -->
     <meta name="twitter:card" content="/image.png" />
-    <meta name="twitter:title" content="ЕНРІ-Трейдинг — ваш партнер у торгівлі та логістиці" />
-    <meta name="twitter:description" content="Наша місія — надавати бізнесу ефективні та надійні рішення в сфері торгівлі та логістики. Ми пишаємося сотнями успішних проектів та довгостроковими партнерствами з нашими клієнтами." />
+    <meta name="twitter:title" content="ЕНРІ-Трейдинг — ваш партнер у торгівлі та логістиці сантехніки та опалення" />
+    <meta name="twitter:description" content="Наша місія — забезпечувати бізнес ефективними та надійними рішеннями в сфері торгівлі та логістики сантехнічного та опалювального обладнання. Ми співпрацюємо з провідними виробниками та постачальниками, гарантуємо якість продукції й оптимізацію постачань." />
     <meta name="twitter:image" content="/image.png" />
 
-    <title>ЕНРІ-Трейдинг — ваш партнер у торгівлі та логістиці</title>
+    <title>ЕНРІ-Трейдинг — ваш партнер у торгівлі та логістиці сантехніки та опалення</title>
   </head>
   <body>
     <div id="root"></div>
