Improve meta tags and caching headers for better SEO and performance

--- a/frontend/index.html
+++ b/frontend/index.html
@@ -11,15 +11,19 @@
     <!-- Open Graph мета-теги для Telegram и других соцсетей -->
     <meta property="og:title" content="ЕНРІ-Трейдинг — ваш партнер у торгівлі та логістиці сантехніки та опалення" />
     <meta property="og:description" content="Наша місія — забезпечувати бізнес ефективними та надійними рішеннями в сфері торгівлі та логістики сантехнічного та опалювального обладнання. Ми співпрацюємо з провідними виробниками та постачальниками, гарантуємо якість продукції й оптимізацію постачань." />
-    <meta property="og:image" content="/image.png" />
+    <meta property="og:image" content="https://enri-trading.com/image.png" />
     <meta property="og:url" content="https://enri-trading.com/" />
     <meta property="og:type" content="website" />
 
     <!-- Twitter Card мета-теги (опционально) -->
-    <meta name="twitter:card" content="/image.png" />
+    <meta name="twitter:card" content="summary_large_image" />
     <meta name="twitter:title" content="ЕНРІ-Трейдинг — ваш партнер у торгівлі та логістиці сантехніки та опалення" />
     <meta name="twitter:description" content="Наша місія — забезпечувати бізнес ефективними та надійними рішеннями в сфері торгівлі та логістики сантехнічного та опалювального обладнання. Ми співпрацюємо з провідними виробниками та постачальниками, гарантуємо якість продукції й оптимізацію постачань." />
     <meta name="twitter:image" content="/image.png" />
+
+    <meta http-equiv="Cache-Control" content="no-cache, no-store, must-revalidate" />
+    <meta http-equiv="Pragma" content="no-cache" />
+    <meta http-equiv="Expires" content="0" />
 
     <title>ЕНРІ-Трейдинг — ваш партнер у торгівлі та логістиці сантехніки та опалення</title>
   </head>
