Обновлены мета-теги и заголовок в index.html для улучшения SEO и акцента на услугах в сфере сантехники и отопления. Переведены тексты на английский язык.

--- a/frontend/index.html
+++ b/frontend/index.html
@@ -9,24 +9,24 @@
     <link rel="manifest" href="/site.webmanifest" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <!-- Open Graph мета-теги для Telegram и других соцсетей -->
-    <meta property="og:site_name" content="ЕНРІ-Трейдинг"/>
-    <meta property="og:title" content="ЕНРІ-Трейдинг — ваш партнер у торгівлі та логістиці сантехніки та опалення" />
-    <meta property="og:description" content="Наша місія — забезпечувати бізнес ефективними та надійними рішеннями в сфері торгівлі та логістики сантехнічного та опалювального обладнання. Ми співпрацюємо з провідними виробниками та постачальниками, гарантуємо якість продукції й оптимізацію постачань." />
+    <meta property="og:site_name" content="ENRI-Trading"/>
+    <meta property="og:title" content="ENRI-Trading — your partner in plumbing and heating trade and logistics" />
+    <meta property="og:description" content="Our mission is to provide businesses with effective and reliable solutions in the field of trade and logistics of plumbing and heating equipment. We cooperate with leading manufacturers and suppliers, guarantee product quality and optimized supplies." />
     <meta property="og:image" content="https://enri-trading.com/banner.png?v=777" />
     <meta property="og:url" content="https://enri-trading.com/" />
     <meta property="og:type" content="website" />
 
     <!-- Twitter Card мета-теги (опционально) -->
     <meta name="twitter:card" content="summary_large_image" />
-    <meta name="twitter:title" content="ЕНРІ-Трейдинг — ваш партнер у торгівлі та логістиці сантехніки та опалення" />
-    <meta name="twitter:description" content="Наша місія — забезпечувати бізнес ефективними та надійними рішеннями в сфері торгівлі та логістики сантехнічного та опалювального обладнання. Ми співпрацюємо з провідними виробниками та постачальниками, гарантуємо якість продукції й оптимізацію постачань." />
+    <meta name="twitter:title" content="ENRI-Trading — your partner in plumbing and heating trade and logistics" />
+    <meta name="twitter:description" content="Our mission is to provide businesses with effective and reliable solutions in the field of trade and logistics of plumbing and heating equipment. We cooperate with leading manufacturers and suppliers, guarantee product quality and optimized supplies." />
     <meta name="twitter:image" content="https://enri-trading.com/banner.png?v=777" />
 
     <meta http-equiv="Cache-Control" content="no-cache, no-store, must-revalidate" />
     <meta http-equiv="Pragma" content="no-cache" />
     <meta http-equiv="Expires" content="0" />
 
-    <title>ЕНРІ-Трейдинг — ваш партнер у торгівлі та логістиці сантехніки та опалення</title>
+    <title>ENRI-Trading — your partner in plumbing and heating trade and logistics</title>
   </head>
   <body>
     <div id="root"></div>
